# verbosio

./: .gitignore  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
examples/: terminal_example.rs  with_clap.rs
src/: lib.rs  macros.rs  util.rs
src/macros/: mod.rs  terminal.rs  verbosity.rs
